--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,12 @@ a {
 .bar {
     text-decoration: line-through;
 }
+
+.small {
+    font-size: 10px;
+    margin: 8px;
+}
+
+h2 {
+    margin-left: 8px
+}
