--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,6 @@
     margin: 0;
 }
 
-
-
-
 header {
     width: 100vw;
     height: 70px;
@@ -17,62 +14,42 @@ header {
     background-color: rgb(255, 98, 0);
     position:fixed;
     top:0;
-    left: 0;
-    
-    
-    
+    left: 0; 
 }
 
-.logo{
-    
-    height: 40%;
-    
+.logo{  
+    height: 40%;  
 }
 
-main {
-    
+main {   
     margin-top: 100px;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    
-    
-
-
 }
 
 .row {
     display: flex;
-    justify-content: space-between;
-    
+    justify-content: space-between; 
 }
 
 .card-container {
     width: 30%;
     padding-bottom: 100px;
-    
-
 }    
         
 .card {
-
     width:100%;
     position: relative;
 }
 
 .preview {
  width: 26vw;
- 
-
-   
 }
 
 .nascosta {
-    
     position: absolute;
     top: 0;
-    
-
 }
 
 footer {
@@ -90,12 +67,10 @@ a {
     color: white;
 }
 
-.Discount {
-    
+.Discount {  
     background-color: red;
     position:absolute;
     bottom:150px;
-
 }
 
 .sostenibility {
@@ -128,4 +103,35 @@ a {
 
 h2 {
     margin-left: 8px
+}
+
+.fa-brands {
+    background-color: white;
+    text-align: center;
+    border-radius: 5px;
+    width: 21px;
+    height: 21px;
+    margin: auto;
+    padding: 2px;
+}
+
+.heart {
+    background-color: white;
+    position: absolute;
+    top: 20px;
+    right: -30px;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.fa-heart {
+    color:black;
+    
+}
+
+.fa-heart:hover {
+    color:red
 }
